// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : State : State grade renders correctly 1`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current 
    <a
      href="/state-grades"
    >
      data quality grade
    </a>
    :
  </span>
  <img
    alt="Grade a"
    className="grade"
    src="test-file-stub"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 2`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current 
    <a
      href="/state-grades"
    >
      data quality grade
    </a>
    :
  </span>
  <img
    alt="Grade A+"
    className="grade"
    src="test-file-stub"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 3`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current 
    <a
      href="/state-grades"
    >
      data quality grade
    </a>
    :
  </span>
  <img
    alt="Grade na"
    className="grade"
    src="test-file-stub"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 4`] = `
<img
  alt="Grade a"
  className="gradeLarge"
  src="test-file-stub"
/>
`;
